fix not insert old feed add retainedDate change insert terms, AutoUpdateTask, updateFeed fix autoUpdateTask test case   - fix mocked static method fix code smell   - duplicate literal fixed